--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm run build
+            npm run test
             exit 0
                 
   test-backend:
@@ -64,7 +64,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm run build
+            npm run test
             exit 0
 
 workflows:
