--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,36 @@ jobs:
             npm run test
             exit 0
 
+  scan-frontend:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-scan]
+      - run:
+          name: front-end scan
+          command: |
+            cd frontend
+            npm install
+          # npm install oauth-sign@^0.9.0
+            npm audit --audit-level=critical
+
+  scan-backend:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-scan]
+      - run:
+          name: Back-end scan
+          command: |
+            cd backend
+            npm install
+          # npm install oauth-sign@^0.9.0
+            npm audit --audit-level=critical
+
 workflows:
   default:
     jobs:
@@ -76,4 +106,8 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
       
