--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,6 @@
 version: 2.1
 orbs: 
+  node: 'circleci/node:4.1'
   slack: circleci/slack@4.10.1
 
 jobs:
@@ -101,27 +102,17 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
-  notify:
-    docker:
-      - image: 'cimg/base:stable'
+  deploy:
+    executor:
+      name: node/default
     steps:
+      - checkout
+      - node/install-packages
+      - run:
+          command: npm run deploy
       - slack/notify:
-          custom: |
-            {
-              "blocks": [
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "plain_text",
-                      "text": "*This is a text notification*",
-                      "emoji": true
-                    }
-                  ]
-                }
-              ]
-            }
-          event: always
+          event: fail
+          template: basic_fail_1
 
 workflows:
   default:
@@ -136,5 +127,5 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
-      - notify:
+      - deploy:
           context: SLACK_ACCESS_TOKEN
