add slack alert

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,5 @@
 version: 2.1
 orbs: 
-  node: 'circleci/node:13.8.0'
   slack: circleci/slack@4.10.1
 
 jobs:
@@ -102,17 +101,27 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
-  deploy:
-    executor:
-      name: node/default
+  notify:
+    docker:
+      - image: 'cimg/base:stable'
     steps:
-      - checkout
-      - node/install-packages
-      - run:
-          command: npm run deploy
       - slack/notify:
+          custom: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "plain_text",
+                      "text": "*This is a text notification*",
+                      "emoji": true
+                    }
+                  ]
+                }
+              ]
+            }
           event: fail
-          template: basic_fail_1
 
 workflows:
   default:
@@ -127,5 +136,5 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
-      - deploy:
+      - notify:
           context: SLACK_ACCESS_TOKEN
