--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,3 +138,4 @@ workflows:
           requires: [build-frontend]
       - notify:
           context: SLACK_ACCESS_TOKEN
+          requires: [build-backend]
