--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,6 +175,14 @@ jobs:
             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --output text >> ~/project/.circleci/ansible/inventory.txt
             cat ~/project/.circleci/ansible/inventory.txt
+      - run:
+          name: save the new back-end url to memory
+          command: |
+            backend_url=$(aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --output text)
+            curl https://kvdb.io/XLd8HgwASi4QGKrXEgQNbo/values/backend_url -d "http://${backend_url}:3030"
       - persist_to_workspace:
           root: ~/
           paths:
@@ -264,7 +272,7 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            API_URL=$(curl https://kvdb.io/XLd8HgwASi4QGKrXEgQNbo/backend_url)
+            API_URL=$(curl --insecure https://kvdb.io/XLd8HgwASi4QGKrXEgQNbo/backend_url)
             echo $API_URL
             echo "NODE_ENV=production" >> frontend/.env
             echo "API_URL=${API_URL}" >> frontend/.env
@@ -318,6 +326,40 @@ jobs:
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
+  smoke-test:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - attach_workspace:
+          at: /root
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update curl
+            pip install awscli
+      - run:
+          name: Backend smoke test.
+          command: |
+            export backend_url=$(curl --insecure https://kvdb.io/XLd8HgwASi4QGKrXEgQNbo/backend_url)
+            echo $backend_url
+            # curl "$backend_url/api/status"
+      - run:
+          name: Frontend smoke test.
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com"
+            if curl -s ${URL} | grep "Welcome"
+            then
+              return 0
+            else
+              return 1
+            fi
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
+
 workflows:
   default:
     jobs:
@@ -345,3 +387,5 @@ workflows:
       - deploy-frontend:
           requires:
             - run-migrations
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
