add revert migrations

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,26 @@ commands:
             aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
             aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
 
+  revert-migrations:
+    description: Revert the last migration if successfully run in the current workflow.
+    parameters:
+      # Add parameter here
+      workflow_id:
+        type: string
+    steps:
+      - run:
+          name: Revert migrations
+          # Add when this will run
+          when: on_fail
+          command: |
+            # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
+            SUCCESS=$(curl --insecure https://kvdb.io/XLd8HgwASi4QGKrXEgQNbo/DB_MIGRATION_<< parameters.workflow_id >>)
+            if(( $SUCCESS==1 )); 
+            then
+            cd backend
+            npm run migrations:revert
+            fi
+
 orbs: 
   slack: circleci/slack@4.10.1
 
