--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,15 +218,13 @@ jobs:
           NODE_ENV: "local"
           VERSION: "1"
           ENVIRONMENT: "production"
-          TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
-          TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
-          TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
-          TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
-          TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
-          # TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
-          # TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
-          TYPEORM_PORT: 5432
-          TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
+          TYPEORM_CONNECTION: $TYPEORM_CONNECTION
+          TYPEORM_HOST: $TYPEORM_HOST
+          TYPEORM_USERNAME: $TYPEORM_USERNAME
+          TYPEORM_PASSWORD: $TYPEORM_PASSWORD
+          TYPEORM_DATABASE: $TYPEORM_DATABASE
+          TYPEORM_PORT: $TYPEORM_PORT
+          TYPEORM_ENTITIES: $TYPEORM_ENTITIES
     steps:
       - checkout
       # Add ssh keys with fingerprint
