--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -439,3 +439,5 @@ workflows:
             - run-migrations
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
+      - cloudfront-update:
+          requires: [smoke-test]
