--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -383,11 +383,6 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install dependencies
-          command: |
-            apk add --update curl
-            pip install awscli
-      - run:
           name: get old workflow for clean
           command: |
             WorkflowID=$(aws cloudformation \
@@ -462,3 +457,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
